@@ -45,6 +45,9 @@ Each release lists incompatible changes at its top.
 @item Bug Fixes
 @itemize @minus
 @item Always rebuild the list of marked winows in tabs when closing a marked window. [fuchur]
+
+@item Only allow a window to be tabbed, if the parent window's framestyle has support for tabs.
+(Note that in Sawfish different windows can have diffrent framestyles) [fuchur]
 @end itemize
 @item Miscellaneous Changes
 @itemize @minus
